build_log_7.txt
    Checking astraweave-render v0.1.0 (C:\Users\pv2br\Documents\GitHub\AstraWeave-AI-Native-Gaming-Engine\astraweave-render)
warning: use of deprecated type alias `wgpu::ImageCopyTexture`: This has been renamed to `TexelCopyTextureInfo`, and will be removed in 25.0.0.
    --> astraweave-render\src\renderer.rs:2596:19
     |
2596 |             wgpu::ImageCopyTexture {
     |                   ^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `wgpu::ImageDataLayout`: This has been renamed to `TexelCopyBufferLayout`, and will be removed in 25.0.0.
    --> astraweave-render\src\renderer.rs:2603:19
     |
2603 |             wgpu::ImageDataLayout {
     |                   ^^^^^^^^^^^^^^^

warning: unused variable: `fallback_view`
    --> astraweave-render\src\renderer.rs:1915:13
     |
1915 |         let fallback_view = fallback_tex.create_view(&wgpu::TextureViewDescriptor::default());
     |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_fallback_view`
     |
     = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `fallback_sampler`
    --> astraweave-render\src\renderer.rs:1916:13
     |
1916 |         let fallback_sampler = device.create_sampler(&wgpu::SamplerDescriptor {
     |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_fallback_sampler`

warning: unused variable: `debug_quad_pipeline`
    --> astraweave-render\src\renderer.rs:1961:13
     |
1961 |         let debug_quad_pipeline = device.create_render_pipeline(&wgpu::RenderPipelineDescriptor {
     |             ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_debug_quad_pipeline`

warning: unused variable: `fallback_view`
    --> astraweave-render\src\renderer.rs:2404:13
     |
2404 |         let fallback_view = fallback_tex.create_view(&wgpu::TextureViewDescriptor::default());
     |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_fallback_view`

warning: unused variable: `fallback_sampler`
    --> astraweave-render\src\renderer.rs:2405:13
     |
2405 |         let fallback_sampler = device.create_sampler(&wgpu::SamplerDescriptor {
     |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_fallback_sampler`

warning: unused variable: `debug_quad_pipeline`
    --> astraweave-render\src\renderer.rs:2450:13
     |
2450 |         let debug_quad_pipeline = device.create_render_pipeline(&wgpu::RenderPipelineDescriptor {
     |             ^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_debug_quad_pipeline`

error[E0597]: `handle.texture` does not live long enough
    --> astraweave-render\src\renderer.rs:3231:19
     |
3230 |             let (tex_view, tex_sampler) = if let Some(handle) = tex_handle {
     |                                                       ------ binding `handle` declared here
3231 |                 (&handle.texture.view, &handle.texture.sampler)
     |                   ^^^^^^^^^^^^^^ borrowed value does not live long enough
3232 |             } else {
     |             - `handle.texture` dropped here while still borrowed

error[E0597]: `handle.texture` does not live long enough
    --> astraweave-render\src\renderer.rs:3693:19
     |
3692 |             let (view_ref, sampler_ref) = if let Some(handle) = handle_opt {
     |                                                       ------ binding `handle` declared here
3693 |                 (&handle.texture.view, &handle.texture.sampler)
     |                   ^^^^^^^^^^^^^^ borrowed value does not live long enough
3694 |             } else {
     |             - `handle.texture` dropped here while still borrowed

For more information about this error, try `rustc --explain E0597`.
warning: `astraweave-render` (lib) generated 8 warnings
error: could not compile `astraweave-render` (lib) due to 2 previous errors; 8 warnings emitted
